testsuite/tests/properties/invalid_eq/test.out
== bool_entity/test.lkt ==
test.lkt:4:39: error: Incompatible types for equality: Bool and Entity[Example]
4 |     @exported fun prop(): Bool = true == self
  |                                       ^^


== bool_node/test.lkt ==
test.lkt:4:39: error: Incompatible types for equality: Bool and Example
4 |     @exported fun prop(): Bool = true == node
  |                                       ^^


== correct_bool/test.lkt ==
Code generation was successful

== correct_entity/test.lkt ==
Code generation was successful

== correct_entity_subclass/test.lkt ==
Code generation was successful

== correct_node/test.lkt ==
Code generation was successful

== correct_node_subclass/test.lkt ==
Code generation was successful

== entity_cross/test.lkt ==
test.lkt:4:54: error: Entity[Lit] and Entity[Example] values are never equal
4 |     @exported fun prop(): Bool = self.parent.as[Lit] == self
  |                                                      ^^


== int_bool/test.lkt ==
test.lkt:4:36: error: Incompatible types for equality: Int and Bool
4 |     @exported fun prop(): Bool = 1 == true
  |                                    ^^


== node_bool/test.lkt ==
test.lkt:4:39: error: Incompatible types for equality: Example and Bool
4 |     @exported fun prop(): Bool = node == true
  |                                       ^^


== node_cross/test.lkt ==
test.lkt:4:54: error: Lit and Example values are never equal
4 |     @exported fun prop(): Bool = node.parent.as[Lit] == node
  |                                                      ^^


== node_entity/test.lkt ==
test.lkt:4:39: error: Incompatible types for equality: Example and Entity[Example]
4 |     @exported fun prop(): Bool = node == self
  |                                       ^^


lkt_compile: Done
